# LearnOpenGL

./: .gitignore  CMakeLists.txt
myClass/: my_TextureLoader.h  my_fpsCamera.h  my_shader.h
shader/: Matrix.frag  Matrix.vert  Texture.vert  Triangle.frag  Triangle.vert  cube.frag  cube.vert
src/: glad.c  main.cpp  test.cpp
